src/test/deca/context/invalid/instanceof-noType.deca
{
    Object o;
    Object a;
    a instanceof o;
}
